Dodan link na naslov

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <body>
         <nav class="nav" data-aos="fade-down" data-aos-duration="700" data-aos-delay="0">
             <div class="nav__title">
-                <h2>Photosen</h2>
+                <h2><a href="index.html">Photosen</a></h2>
             </div>
             <div class="nav__links">
                 <ul class="nav__links-content">
